Initial styles and wiring up the frontend to the server

--- a/src/web/app/app.component.html
+++ b/src/web/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
+<h1 class="title">
+  NATurally Awesome System for Home Automation
 </h1>
+<section>
+  <h2 class="section-title">
+    Devices
+  </h2>
+  <nsh-devices></nsh-devices>
+</section>
