--- a/src/web/app/devices/devices.component.scss
+++ b/src/web/app/devices/devices.component.scss
@@ -14,7 +14,8 @@
   }
 
   &__item {
-    background-color: #888;
+    border: 4px solid #666;
+    border-radius: 2px;
     flex: 1 1 auto;
     padding: 10px;
     font-size: 1.2rem;
